<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Lukasz Skalski <lukasz.skalski@op.pl>
~
~ This file is part of Raspberry Control.
~
~ Raspberry Control is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ Raspberry Control is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with Raspberry Control.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:fillViewport="true">

	<LinearLayout
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="20dip">

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/login_ip"/>

		  <EditText
		      android:id="@+id/login_ip"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="5dip"
		      android:layout_marginTop="5dip"
		      android:singleLine="true"
		      android:inputType="text"/>

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/login_port"/>

		  <EditText
		      android:id="@+id/login_port"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="5dip"
		      android:layout_marginTop="5dip"
		      android:singleLine="true"
		      android:inputType="number"/>

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_timeout"/>

          <EditText
              android:id="@+id/login_timeout"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dip"
              android:layout_marginTop="5dip"
              android:singleLine="true"
              android:inputType="number"/>

		  <Button
                      android:id="@+id/login_btn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="15dip"
                      android:layout_gravity="center"
                      android:text="@string/login_btn_conect"
                      android:background="@drawable/button_red"
                      style="@style/AppButtonStyle" />

	</LinearLayout>
</ScrollView>
