<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Lukasz Skalski <lukasz.skalski@op.pl>
~
~ This file is part of Raspberry Control.
~
~ Raspberry Control is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ Raspberry Control is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with Raspberry Control.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tempsensor"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="fill_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/tempsensor_image"
        android:src="@drawable/temperature_sensor_01"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="8dp"
        android:gravity="center"
        android:contentDescription="@string/image_desc" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tempsensor_type"
            android:text="@string/com_msg_4"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tempsensor_id"
            android:text="@string/tempsensor_label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempsensor_type"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempsensor_id_value"
            android:text="@string/com_msg_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tempsensor_id"
            android:layout_toRightOf="@+id/tempsensor_id"
            android:layout_alignLeft="@+id/tempsensor_temp_value"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tempsensor_temp"
            android:text="@string/tempsensor_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempsensor_id"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempsensor_temp_value"
            android:text="@string/com_msg_4"
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tempsensor_temp"
            android:layout_toRightOf="@+id/tempsensor_temp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tempsensor_crc"
            android:text="@string/tempsensor_label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempsensor_temp"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempsensor_crc_value"
            android:text="@string/com_msg_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tempsensor_crc"
            android:layout_toRightOf="@+id/tempsensor_crc"
            android:layout_alignLeft="@+id/tempsensor_temp_value"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</LinearLayout>